# bevy-on-elixir-poc

./: .dockerignore  .formatter.exs  .tool-versions  Dockerfile  README.md  docker-compose.yml  fly.toml  mix.exs
.devcontainer/: Dockerfile  devcontainer.env  devcontainer.json  docker-compose.yml
_build/dev/lib/ecto/.mix/: compile.elixir  (+1 more)
assets/: build.js  package-lock.json  package.json
assets/css/: app.css  rust.css
assets/hello-wasm/: Cargo.toml
assets/js/: app.js  user_socket.js
assets/rust/: Cargo.toml  build-rust  index.html
assets/rust/js/: helper.js
assets/rust/src/: main.rs
config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
lib/: flaming_bird_flock.ex  flaming_bird_flock_web.ex
lib/flaming_bird_flock/: application.ex  mailer.ex  release.ex  repo.ex
lib/flaming_bird_flock_web/: endpoint.ex  gettext.ex  router.ex  telemetry.ex
lib/flaming_bird_flock_web/channels/: test_channel.ex  user_socket.ex
lib/flaming_bird_flock_web/controllers/: page_controller.ex
lib/flaming_bird_flock_web/live/: rust_live.ex
lib/flaming_bird_flock_web/templates/layout/: root.html.heex
lib/flaming_bird_flock_web/views/: error_helpers.ex  error_view.ex  layout_view.ex  page_view.ex
priv/repo/: seeds.exs
priv/static/assets/: app.js
test/: test_helper.exs
test/flaming_bird_flock_web/channels/: test_channel_test.exs
test/flaming_bird_flock_web/controllers/: page_controller_test.exs
test/flaming_bird_flock_web/views/: error_view_test.exs  layout_view_test.exs  page_view_test.exs
test/support/: channel_case.ex  conn_case.ex  data_case.ex
(+761 files in other folders)
