[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.12.0"
bevy = "0.9.1"
js-sys = "0.3.60"
rand = "0.8.5"
serde = { version = "1.0.152", features = ["derive"] }
serde-wasm-bindgen = "0.4.5"
wasm-bindgen = "0.2.83"
wasm-bindgen-futures = "0.4.33"

[dependencies.web-sys]
version = "0.3.60"
features = ['Window', 'console', 'MessageEvent']
